aggregator/k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator
  template:
    metadata:
      labels:
        app: aggregator
    spec:
      containers:
        - name: aggregator
          image: '10.43.0.50:5000/aggregator:latest'
          resources:
            limits:
              memory: "128Mi"
              cpu: "0.2"
          securityContext:
            privileged: false
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
